<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="email_and_password">Электронная почта и пароль</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify">Verify Email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified:%2$b)</string>
    <string name="signed_out">Signed Out</string>
</resources>